# sem2

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  makefile  mkdocs.yml  pyproject.toml  sem-cli  sem-cli.py
docker/: Dockerfile  requirements.txt  run.sh
docs/: index.md  makefile
docs/reference/: crud_handler.md  models.md  schemas.md  session.md
modules/: api.py  cli.py  common.py  crud.py  crud_handler.py  database.py  main.py  models.py  schemas.py  session.py
resources/: test-1.csv  test-invalid_field.csv  test-invalid_field_number.csv
tests/: common.py  test_api.py  test_crud_handler.py
