[tool.poetry]
name = "sem"
version = "0.1.0"
description = "Simple expense manager"
authors = ["aangelone2 <adriano.angelone.work@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.20"
SQLAlchemy-Utils = "^0.41.1"
psycopg = "^3.1.14"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24"}
mkdocs-material = "^9.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
